# yddg

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: python-package.yml
coverage_html_report/: index.html  status.json  yddg___init___py.html  yddg_api_tasks_py.html  yddg_data_generator_py.html
docs/source/: conf.py  index.rst
tests/: cases.py  test_data_generator.py  test_downloader.py  test_path_requester.py
yddg/: __init__.py  api_tasks.py  constants.py  custom_types.py  data_generator.py  downloader.py  path_requester.py
