# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = yddg
version = attr: yddg.__version__
author = gofff
home-page = https://github.com/gofff/yddg
description = Yandex Disk Data Generator
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords = yandex, yandex disk, data generator
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
packages = yddg
test_suite = tests
setup_requires =
    setuptools >=30.3.0     # minimal version for `setup.cfg`
    
[yapf]
based_on_style = google
spaces_before_comment = 4
column_limit = 78
split_before_logical_operator = true